[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "gspread>=6.2.0",
    "hijri-converter>=2.3.1",
    "oauth2client>=4.1.3",
    "pytelegrambotapi>=4.26.0",
    "pytz>=2025.1",
    "whatsapp-python-sdk>=1.0.0",
]
